--- a/mediaquerries.css
+++ b/mediaquerries.css
@@ -19,6 +19,8 @@
         #experience, .experience-details-container{
             margin-top: 2rem;
         }
+        #profile{
+            margin-bottom: -50vh;
         #profile,.section-container{
             display: block;
         }
@@ -47,7 +49,7 @@
         }
         #profile{
             height: 83vh;
-            margin-bottom: 0;
+            margin-bottom: -50vh;
         }
         article{
             font-size: 1rem;
