--- a/mediaquerries.css
+++ b/mediaquerries.css
@@ -21,6 +21,7 @@
         }
         #profile{
             margin-bottom: -50vh;
+        }
         #profile,.section-container{
             display: block;
         }
